<resources>
    <string name="app_name">NASA Stars News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>




// info
    <string name="developing">Данный раздел приложение находится в стадии разработки и будет доступен в следующих версиях приложения</string>

<!--    <string name="error_load_data">Ошибка загрузки данных</string>-->



    //toolbar
    <string name="title_group_feedback">Обратная связь</string>

    <string name="settings">Насторйки</string>

    <string name="fragment_apod">Новости</string>
    <string name="menu_apod">Новости</string>

    <string name="menu_asteroids">Астероиды</string>

    <string name="menu_mars_photo">Фотографии Марса</string>

    <string name="menu_about_app">О приложении</string>

    //Toast button
    <string name="settings_change_use_two_text">Для применения изменений переоткройте новость</string>
    <string name="settings_change_language">Для применения изменений перезагрузите данные</string>
    <string name="error_load_data">Ошибка загрузки</string>
    <string name="button_reply_load">Повторить</string>



    //preferences

    <string name="language_group">Язык</string>
    <string name="image_group">Изображения</string>

    <string name="settings_use_hd">HD изображения</string>
    <string name="settings_use_hd_summary">загружать изображения в HD</string>
    <string name="language">Язык текста</string>
    <string name="language_title_dialog">Веберите язык</string>

    <string name="show_two_texts">Показыать два текста</string>
    <string name="show_two_texts_summary">Показывать оригинал и перевод текста</string>

    //service name
    <string name="service_name_in_apod_fragment">Перевод выполнен сервисом Yandex Переводчик</string>



    <string name="region">ru</string>

    // about app


    <string name="about_app">
        &lt;h1>NASA - Stars news&lt;/h1>
        &lt;p align="justify">В разделе \"Новости\" собраны астрономические картины дня - главное за день в Астрономии.&lt;/p>
        &lt;p align="justify"> Разделы \"Астероиды\" и \"Фотографии Марса\" будут доступны в следующих версиях приложения.&lt;/p>
        &lt;p align="justify">Данные предоставлены Космическим Агенством NASA.&lt;/p>
        &lt;p align="justify">Оригинальный язык получаемых данных - Английский.&lt;/p>
        &lt;p align="justify">Перевод на другие языки выполняется сервисом &lt;a href="http://translate.yandex.ru">Yandex Переводчик&lt;/a>.&lt;/p>
        &lt;p align="justify">Приложение &lt;b>NASA - Stars news&lt;/b> в &lt;a href="https://play.google.com/store/apps/details?id=com.nasa.nasastarsnews">Play Market&lt;/a>.&lt;/p>

    </string>




</resources>
