<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apod"
            android:icon="@drawable/icon_news_32"
            android:title="@string/menu_apod" />
        <item
            android:id="@+id/nav_asteroids"
            android:icon="@drawable/icon_comet_32"
            android:title="@string/menu_asteroids" />
        <item
            android:id="@+id/nav_mars_photo"
            android:icon="@drawable/icon_mars_32"
            android:title="@string/menu_mars_photo" />

    </group>

    <item android:title="@string/title_group_feedback">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/icon_about_app_32"
                android:title="@string/menu_about_app" />

        </menu>
    </item>

</menu>
