<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_apod">

    <fragment
        android:id="@+id/nav_apod"
        android:name="com.sn.starsnews.ui.apod.ApodListFragment"
        android:label="@string/menu_apod"
        tools:layout="@layout/list_fragment_apod">

        <action
            android:id="@+id/to_fragment_apod"
            app:destination="@+id/fragment_apod"
            app:popUpTo="@id/nav_apod"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/fragment_preferences"
        android:name="com.sn.starsnews.ui.CustomPreferenceFragment"
        android:label="@string/settings" />

    <action android:id="@+id/to_fragment_preferences"
        app:destination="@id/fragment_preferences"/>



    <fragment
        android:id="@+id/fragment_apod"
        android:name="com.sn.starsnews.ui.apod.ApodFragment"
        android:label="@string/fragment_apod"
        tools:layout="@layout/fragment_apod_layout" />

    <fragment
        android:id="@+id/nav_asteroids"
        android:name="com.sn.starsnews.ui.asteroids.AsteroidsFragment"
        android:label="@string/menu_asteroids"
        tools:layout="@layout/fragment_asteroids" />

    <fragment
        android:id="@+id/nav_mars_photo"
        android:name="com.sn.starsnews.ui.photo_mars.MarsPhotoFragment"
        android:label="@string/menu_mars_photo"
        tools:layout="@layout/fragment_mars_photo" />


    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.sn.starsnews.ui.about_app.AboutAppFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_about_app" />




</navigation>